# IRIS-Theory-Of-Mind-LLMs

./: README.md  config.yaml  llm_interface.py  main.py  theory_of_mind.py  tom_42d5ccf4.json  tom_f7a2ab28.json  utils.py  visualization.py
aperture/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  PHASE_2_COMPLETE.md  PRICING_STRATEGY.md  PROJECT_SUMMARY.md  README.md  SESSION_SUMMARY.md  SETUP.md  TESTING.md  config.py  docker-compose.yml  example_client.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
aperture/.github/workflows/: ci.yml
aperture/db/: schema.sql  supabase_client.py
aperture/examples/basic-script/: README.md  chatbot.py
aperture/examples/flask-chat/: README.md  app.py  requirements.txt
aperture/examples/flask-chat/templates/: chat.html
aperture/examples/nextjs-chat/: README.md
aperture/examples/nextjs-chat/app/: page.tsx
aperture/examples/nextjs-chat/app/api/chat/: route.ts
aperture/schemas/: __init__.py  assessments.py  constructs.py  messages.py
aperture/scripts/: fix.sh  lint.sh
aperture/sdk/python/: README.md  setup.py
aperture/sdk/python/aperture/: __init__.py
aperture/sdk/typescript/: README.md  package.json
aperture/sdk/typescript/src/: index.ts
aperture/services/: __init__.py  assessment_extractor.py  construct_creator.py  email_notifications.py  embeddings.py  llm_proxy.py  pattern_discovery.py  short_link.py
aperture/tests/: conftest.py
aperture/tests/e2e/: jest.config.js  jest.setup.js  landing-page.test.ts  package.json  pricing-calculator.test.ts  tsconfig.json  visual-regression.test.ts
aperture/tests/e2e/helpers/: browser.ts
aperture/tests/integration/: conftest.py  test_api_assessments.py  test_api_messages.py  test_api_patterns.py
aperture/tests/test_api/: test_auth.py  test_health.py
aperture/tests/unit/: test_embeddings.py  test_llm_proxy.py
aperture/web/: landing.html  pricing-calculator.html
aperture/web/templates/: edit_understanding.html  why_response.html
templates/: chat.html
